@@ -48,7 +48,7 @@ This extension has been written to support the following versions of Ingres:
 PHP Releases
 
 This extension has been written against PHP 5.1. Prior versions of PHP, i.e.
-4.0.x - 5.0, contain an earlier version of the Ingres extension. Building the
+4.0.x - 5.0.x, contain an earlier version of the Ingres extension. Building the
 extension with earlier versions requires the deletion of the ingres_ii
 directory under ext.
 
