@@ -114,7 +114,7 @@ Ingres:
 
 <P>
 This extension has been written against PHP 5.1. Prior versions of
-PHP, i.e. 4.0.x - 5.0, contain an earlier version of the Ingres
+PHP, i.e. 4.0.x - 5.0.x, contain an earlier version of the Ingres
 extension. Building the extension with earlier versions requires the
 deletion of the <I>ingres_ii</I> directory under <I>ext</I>.
 </P>
